@@ -19,7 +19,6 @@
 package org.fenixedu.academic.servlet;
 
 import java.util.Properties;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import javax.mail.Session;
 import javax.mail.Transport;
@@ -30,9 +29,7 @@ import javax.servlet.http.HttpServletRequest;
 
 import org.fenixedu.academic.FenixEduAcademicConfiguration;
 import org.fenixedu.academic.domain.Installation;
-import org.fenixedu.academic.domain.degreeStructure.ProgramConclusion;
 import org.fenixedu.academic.domain.organizationalStructure.UnitNamePart;
-import org.fenixedu.academic.domain.student.registrationStates.RegistrationStateType;
 import org.fenixedu.academic.service.StudentWarningsDefaultCheckers;
 import org.fenixedu.academic.service.StudentWarningsService;
 import org.fenixedu.bennu.core.api.SystemResource;
@@ -63,22 +60,6 @@ public class FenixInitializer implements ServletContextListener {
 
         registerHealthchecks();
         registerDefaultStudentWarningCheckers();
-
-        migrateProgramConclusionRegistrationStateType();
-    }
-
-    @Atomic
-    private void migrateProgramConclusionRegistrationStateType() {
-        logger.info("[ProgramConclusion RegistrationStateType] migration start..");
-        AtomicInteger counter = new AtomicInteger();
-
-        ProgramConclusion.findAll().filter(pc -> pc.getTargetStateType() == null && pc.getTargetState() != null).forEach(pc -> {
-            pc.setTargetStateType(RegistrationStateType.findByCode(pc.getTargetState().name()).orElseThrow());
-            counter.incrementAndGet();
-        });
-
-        logger.info("[ProgramConclusion RegistrationStateType] " + counter.get() + " objects updated.");
-        logger.info("[ProgramConclusion RegistrationStateType] migration end!");
     }
 
     private void registerDefaultStudentWarningCheckers() {
