@@ -1,3 +1,5 @@
+- Refactor: Program Conclusion - remove RegistrationStateTypeEnum slot 
+
 40.3.2 (16-01-2023)
 - Refactor: Set CET/DET school level as higher education
 
